feature: Landing page and marketing texts

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,12 +10,11 @@
     <mat-card-header>
       <mat-card-title>Save Time</mat-card-title>
     </mat-card-header>
-    <i class="material-icons">face</i>
+    <i class="material-icons">alarm</i>
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz
-        breeds of dog from Japan. A small, agile dog that copes very well with
-        mountainous terrain, the Shiba Inu was originally bred for hunting.
+        Shifts Scheduling takes time. A lot of it. Automate the proccess to save
+        time and money!
       </p>
     </mat-card-content>
   </mat-card>
@@ -26,61 +25,57 @@
     <i class="material-icons">face</i>
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz
-        breeds of dog from Japan. A small, agile dog that copes very well with
-        mountainous terrain, the Shiba Inu was originally bred for hunting.
+        Happier employees are better employees, everybody knows that! Improve
+        your employee's happiness and satisfaction by providing them with the
+        shifts they want!
       </p>
     </mat-card-content>
   </mat-card>
   <mat-card class="feature-card">
     <mat-card-header>
-      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-title>Easy to Use</mat-card-title>
     </mat-card-header>
-    <i class="material-icons">face</i>
+    <i class="material-icons">child_friendly</i>
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz
-        breeds of dog from Japan. A small, agile dog that copes very well with
-        mountainous terrain, the Shiba Inu was originally bred for hunting.
+        Shift Scheduler's intuitive API makes it easy for businesses to
+        incorporate it into their proccess.
       </p>
     </mat-card-content>
   </mat-card>
   <mat-card class="feature-card">
     <mat-card-header>
-      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-title>Competitive Pricing</mat-card-title>
     </mat-card-header>
-    <i class="material-icons">face</i>
+    <i class="material-icons">attach_money</i>
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz
-        breeds of dog from Japan. A small, agile dog that copes very well with
-        mountainous terrain, the Shiba Inu was originally bred for hunting.
+        We made it a point to make Shift Scheduler available to anyone. Our
+        competitive pricing encourages small bussinesses to start automating!
       </p>
     </mat-card-content>
   </mat-card>
   <mat-card class="feature-card">
     <mat-card-header>
-      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-title>State of the Earth Algorithm</mat-card-title>
     </mat-card-header>
-    <i class="material-icons">face</i>
+    <i class="material-icons">settings</i>
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz
-        breeds of dog from Japan. A small, agile dog that copes very well with
-        mountainous terrain, the Shiba Inu was originally bred for hunting.
+        Combining advanced dynamic & genetic techniques, Shift Scheduler results
+        are outstanding!
       </p>
     </mat-card-content>
   </mat-card>
   <mat-card class="feature-card">
     <mat-card-header>
-      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-title>Open Source</mat-card-title>
     </mat-card-header>
-    <i class="material-icons">face</i>
+    <i class="material-icons">code</i>
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz
-        breeds of dog from Japan. A small, agile dog that copes very well with
-        mountainous terrain, the Shiba Inu was originally bred for hunting.
+        We are proud to make Shift Scheduler an Open Source product. Anyone can
+        contribute!
       </p>
     </mat-card-content>
   </mat-card>
