--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,8 +1,8 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
 .mat-drawer-container {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  max-width: 100vw;
   margin: auto;
 
   display: flex;
