--- a/src/app/landing-page/landing-page.component.less
+++ b/src/app/landing-page/landing-page.component.less
@@ -9,20 +9,26 @@
 }
 
 .features {
-  margin-top: 3rem;
+  margin-top: 2rem;
   width: 60%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
+
+  .mat-card-title {
+    line-height: 1.5em;
+    min-height: 3em;
+  }
 }
 
 .call-for-action {
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 .material-icons {
-  font-size: 5rem;
+  font-size: 3rem;
   width: 100%;
   margin: auto;
   text-align: center;
+  padding: 1rem;
 }
