--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -82,5 +82,5 @@
 </section>
 
 <section class="call-for-action">
-  <button mat-raised-button color="primary">Get Started!</button>
+  <button mat-raised-button color="primary" (click)="runAlgo()">Get Started!</button>
 </section>
