shifts-input works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="mat-drawer-container">
   <header><h1>Shift Scheduler</h1></header>
 
-  <app-landing-page></app-landing-page>
+  <router-outlet></router-outlet>
 
   <footer>
     <p>
