--- a/src/styles.less
+++ b/src/styles.less
@@ -1,12 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
-
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
 html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+//.mat-select-panel-wrap * {
+//  width: 24px !important;
+//  //height: 24px !important;
+//  //min-height: 24px !important;
+//  //max-height: 24px !important;
+//  padding: 0 !important;
+//  margin: 0 !important;
+//  min-width: 24px !important;
+//  max-width: 24px !important;
+//}
