done integrating shifts input with algorithm

--- a/src/app/shifts-input/shifts-input.component.html
+++ b/src/app/shifts-input/shifts-input.component.html
@@ -73,5 +73,5 @@
     </tbody>
   </table>
 
-  <button (click)="submit()"></button>
+  <button mat-raised-button color="primary" (click)="submit()">Submit!</button>
 </form>
