shifts result page progress

--- a/src/app/shifts-input/shifts-input.component.html
+++ b/src/app/shifts-input/shifts-input.component.html
@@ -73,5 +73,7 @@
     </tbody>
   </table>
 
-  <button mat-raised-button color="primary" (click)="submit()">Submit!</button>
+  <section class="call-for-action">
+    <button mat-raised-button color="primary" (click)="submit()">Submit!</button>
+  </section>
 </form>
