--- a/src/app/shifts-result/shifts-result.component.html
+++ b/src/app/shifts-result/shifts-result.component.html
@@ -1,3 +1,47 @@
-<p>
-  shifts-result works!
-</p>
+<form class="container" [formGroup]="shiftsInputForm">
+  <table class="data-input">
+    <thead>
+    <th></th>
+    <th *ngFor="let i of [].constructor(numberOfDays); index as currentDay" [attr.colspan]="numberOfShifts"
+        class="day-header">
+      {{days[currentDay]}}
+    </th>
+    </thead>
+    <thead>
+    <th>Name</th>
+    <th *ngFor="let i of [].constructor(numberOfDays * numberOfShifts); index as index">
+      {{(index % numberOfShifts) + 1}}
+    </th>
+    </thead>
+    <tbody>
+    <tr *ngFor="let i of [].constructor(numberOfWorkers); index as worker">
+      <td>
+        <mat-form-field>
+          <input formControlName="{{'worker-' + worker}}" matInput class="input name-input" type="text">
+        </mat-form-field>
+      </td>
+      <td *ngFor="let j of [].constructor(numberOfDays * numberOfShifts); index as relativeShift"
+          class="{{getShiftString(worker, relativeShift)}}">
+        <mat-select formControlName="{{getShiftString(worker, relativeShift)}}">
+          <mat-select-trigger>
+            <div class="{{getCurrentValue(worker, relativeShift).color}}">
+              <mat-icon>
+                {{getCurrentValue(worker, relativeShift).icon}}
+              </mat-icon>&nbsp;
+            </div>
+          </mat-select-trigger>
+          <mat-option *ngFor="let availability of availabilities" [value]="availability">
+            <div class="{{availability.color}}">
+              <mat-icon>{{availability.icon}}</mat-icon>
+            </div>
+          </mat-option>
+        </mat-select>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <section class="call-for-action">
+    <button mat-raised-button color="primary" (click)="submit()">Submit!</button>
+  </section>
+</form>
