fixed landing page

--- a/src/app/shifts-input/shifts-input.component.html
+++ b/src/app/shifts-input/shifts-input.component.html
@@ -75,3 +75,8 @@
 
   <button mat-raised-button color="primary" (click)="submit()">Submit!</button>
 </form>
+<div class="loading-container">
+  <ngx-spinner [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+    <p class="loading">Loading Awesomeness...</p>
+  </ngx-spinner>
+</div>
