fixed landing page

--- a/src/app/shifts-input/shifts-input.component.html
+++ b/src/app/shifts-input/shifts-input.component.html
@@ -78,7 +78,7 @@
   </section>
 </form>
 <div class="loading-container">
-  <ngx-spinner [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
-    <p class="loading">Loading Awesomeness...</p>
+  <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="large">
+    <p class="loading">Scheduling Shifts...</p>
   </ngx-spinner>
 </div>
