--- a/src/app/shifts-input/shifts-input.component.html
+++ b/src/app/shifts-input/shifts-input.component.html
@@ -2,7 +2,7 @@
   <div class="params">
     <div class="number-input-container">
       <mat-form-field>
-        <label>Insert Number Of Workers:</label>
+        <label>Workers:</label>
         <input type="number" matInput min="1" class="input number-of-workers"
                formControlName="numberOfWorkers"
                (change)="rebuildForm()" [(ngModel)]="numberOfWorkers">
@@ -10,21 +10,21 @@
     </div>
     <div class="number-input-container">
       <mat-form-field>
-        <label>Insert Number Of Days:</label>
+        <label>Work Days:</label>
         <input type="number" matInput min="1" max="7" class="input number-of-days"
                formControlName="numberOfDays" (change)="rebuildForm()" [(ngModel)]="numberOfDays">
       </mat-form-field>
     </div>
     <div class="number-input-container">
       <mat-form-field>
-        <label>Insert Number Of Shifts:</label>
+        <label>Shifts:</label>
         <input type="number" matInput min="1" max="3" class="input number-of-shifts"
                formControlName="numberOfShifts" (change)="rebuildForm()" [(ngModel)]="numberOfShifts">
       </mat-form-field>
     </div>
     <div class="number-input-container">
       <mat-form-field>
-        <label>Insert Number Of Necessary Workers Per Shift:</label>
+        <label>Workers Per Shift:</label>
         <input type="number" matInput min="1" class="input number-of-necessary-workers-per-shift"
                formControlName="numberOfNecessaryWorkersPerShift" (change)="rebuildForm()"
                [(ngModel)]="numberOfNecessaryWorkersPerShift">
