--- a/src/app/shifts-input/shifts-input.component.less
+++ b/src/app/shifts-input/shifts-input.component.less
@@ -45,14 +45,11 @@ tr > td:first-child {
   width: 10vw;
 }
 
-.number-input-container {
-  width: 100%;
-}
-
 .params {
-  > * {
-    width: 200px;
-  }
+padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .call-for-action {
