done shifts result

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,5 +1,9 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
+.title {
+  cursor: pointer;
+}
+
 .mat-drawer-container {
   min-height: 100vh;
   max-width: 100vw;
