--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,7 @@
 
   <footer>
     <p>
-      Shift Scheduler is a final project for the College of Management by Bar,
-      Badur, Yarin, Roee.
+      Shift Scheduler is a final project for the College of Management by Bar Goldinfeld, Yarin Ronel, Roee Rokach, Ron Badur.
     </p>
   </footer>
 </div>
