--- a/src/app/shifts-result/shifts-result.component.less
+++ b/src/app/shifts-result/shifts-result.component.less
@@ -11,14 +11,15 @@
 
 .container {
   font-family: 'Anonymous Pro', monospace;
+  margin-top: 4vh;
 }
 
 .line-1 {
-  color: lawngreen;
+  color: #09ff9a;
   position: relative;
   top: 50%;
   width: 17em;
-  margin: 5vh auto 0 auto;
+  margin: 10vh auto 0 auto;
   border-right: 2px solid rgba(255, 255, 255, .75);
   font-size: 180%;
   text-align: center;
