--- a/src/app/shifts-input/shifts-input.component.less
+++ b/src/app/shifts-input/shifts-input.component.less
@@ -4,10 +4,6 @@
 
 .container > * {
   margin: auto;
-  //position: relative;
-  //top: 50%;
-  //left: 50%;
-  //transform: translate(-50%, -50%);
 }
 
 .data-input {
@@ -28,7 +24,7 @@
 }
 
 .red {
-  color: #ff0d00;
+  color: #f81206;
 }
 
 .day-header {
@@ -46,7 +42,7 @@ tr > td:first-child {
 }
 
 .params {
-padding: 1rem;
+  padding: 1rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
