feat(fixes): params-input component and minor fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="mat-drawer-container">
-  <header><h1 routerLink="''" class="title">Shift Scheduler</h1></header>
+  <header><h1 routerLink="/" class="title">Shift Scheduler</h1></header>
 
   <router-outlet></router-outlet>
 
