--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -2,6 +2,8 @@
 
 .title {
   cursor: pointer;
+  width: fit-content;
+  margin: 10px auto;
 }
 
 .mat-drawer-container {
@@ -15,7 +17,17 @@
   justify-content: center;
 }
 
+header {
+  position: static;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 12vh;
+}
+
 footer {
   border-top: 1px solid grey;
   margin-top: 20px;
+  position: static;
+  bottom: 0
 }
