--- a/src/app/landing-page/landing-page.component.less
+++ b/src/app/landing-page/landing-page.component.less
@@ -22,15 +22,11 @@
   }
 }
 
-.call-for-action {
-  margin-top: 2rem;
-}
-
 .material-icons {
   font-size: 3rem;
   width: 100%;
   margin: auto;
   text-align: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.523wrem;
 }
