--- a/src/app/params-input/params-input.component.html
+++ b/src/app/params-input/params-input.component.html
@@ -1,25 +1,38 @@
-<form>
-<div class="params">
-  <div class="number-input-container">
-    <mat-form-field>
-      <label>Workers:</label>
-      <input type="number" matInput min="1" class="input number-of-workers" formControlName="numberOfWorkers"
-        (change)="rebuildForm()" />
-    </mat-form-field>
-  </div>
-  <div class="number-input-container">
-    <mat-form-field>
-      <label>Shifts:</label>
-      <input type="number" matInput min="1" max="3" class="input number-of-shifts" formControlName="numberOfShifts"
-        (change)="rebuildForm()" />
-    </mat-form-field>
-  </div>
-  <div class="number-input-container">
-    <mat-form-field>
-      <label>Workers Per Shift:</label>
-      <input type="number" matInput min="1" class="input number-of-necessary-workers-per-shift"
-        formControlName="numberOfNecessaryWorkersPerShift" (change)="rebuildForm()" />
-    </mat-form-field>
-  </div>
+<div class="container">
+  <form [formGroup]="paramsInputForm">
+    <div class="params">
+      <div class="number-input-container">
+        <mat-form-field>
+          <label>Workers:</label>
+          <input type="number" [(ngModel)]="numberOfWorkers" matInput min="1" class="input number-of-workers"
+                 formControlName="numberOfWorkers"/>
+        </mat-form-field>
+      </div>
+      <div class="number-input-container">
+        <mat-form-field>
+          <label>Number of Days:</label>
+          <input type="number" [(ngModel)]="numberOfDays" matInput min="1" max="7" class="input number-of-workers"
+                 formControlName="numberOfDays"/>
+        </mat-form-field>
+      </div>
+      <div class="number-input-container">
+        <mat-form-field>
+          <label>Shifts:</label>
+          <input type="number" [(ngModel)]="numberOfShifts" matInput min="1" max="3" class="input number-of-shifts"
+                 formControlName="numberOfShifts"/>
+        </mat-form-field>
+      </div>
+      <div class="number-input-container">
+        <mat-form-field>
+          <label>Workers Per Shift:</label>
+          <input type="number" [(ngModel)]="numberOfNecessaryWorkersPerShift" matInput min="1" max="{{numberOfWorkers}}"
+                 class="input number-of-necessary-workers-per-shift"
+                 formControlName="numberOfNecessaryWorkersPerShift"/>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <button mat-raised-button color="primary" (click)="goToShiftsInput()">Let's Move to the workers Constraints!
+    </button>
+  </form>
 </div>
-</form>
